--- a/LockPerformanceFullFramework/LockPerformanceFullFramework.csproj
+++ b/LockPerformanceFullFramework/LockPerformanceFullFramework.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\LockPerformance\LockTime.cs">
+      <Link>LockTime.cs</Link>
+    </Compile>
     <Compile Include="..\LockPerformance\Program.cs">
       <Link>Program.cs</Link>
     </Compile>
